[project]
name = "isomatch"
version = "0.1.0"
description = "Python port of the IsoMatch algorithm (Fried et al., 2015)"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "scikit-image>=0.20",
    "matplotlib>=3.6",   # optional – only used for visualisation in test_isomatch.py
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
